NetworkPolicies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-network-policy
  namespace: network-policy
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  # the upper part will isolate the pods
  # we have to add the code from the bottom to make it work
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: test-network-policy
      ports:
        - protocol: TCP
          port: 80
